--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="rsocial">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a>
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
             <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
         </section>
     </main>
